# simple-parser

./: .gitignore  Main.hs  MainMatch.hs  README.md  Setup.hs  pattern-match  simple-parser  simple-parser.cabal
SimpleParser/: ArgParser.hs  ParseData.hs  ParseError.hs  Parser.hs  PatternMatch.hs  SyntaxTree.hs
